[gd_scene load_steps=16 format=2]

[ext_resource path="res://SkillTree/Main.gd" type="Script" id=1]
[ext_resource path="res://SkillTree/Sprites/stat_background.jpeg" type="Texture" id=2]
[ext_resource path="res://SkillTree/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SkillTree/Sprites/plus.png" type="Texture" id=4]
[ext_resource path="res://SkillTree/Sprites/plus_click.png" type="Texture" id=5]
[ext_resource path="res://SkillTree/Sprites/minus.png" type="Texture" id=6]
[ext_resource path="res://SkillTree/Sprites/minus_click.png" type="Texture" id=7]
[ext_resource path="res://SkillTree/Sprites/Skillsbutton.png" type="Texture" id=8]
[ext_resource path="res://SkillTree/Sprites/Skillsbutton_click.png" type="Texture" id=9]
[ext_resource path="res://SkillTree/Sprites/Skillsbutton_hover.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.333333, 0.427451, 0.427451, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=5]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="stat_background" type="Sprite" parent="." index="0"]

position = Vector2( 375.497, 224.336 )
texture = ExtResource( 2 )

[node name="Head" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 13.0
margin_right = 223.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Stats"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StatContainer" type="VBoxContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 124.0
margin_right = 434.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Constitution" type="Label" parent="StatContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 423.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0901961, 0.0705882, 0.027451, 1 )
text = "Constitution: 10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Strength" type="Label" parent="StatContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 423.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0901961, 0.0705882, 0.027451, 1 )
text = "Strength: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Agility" type="Label" parent="StatContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 423.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0901961, 0.0705882, 0.027451, 1 )
text = "Agility: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Woodcutting" type="Label" parent="StatContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 246.0
margin_right = 423.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0901961, 0.0705882, 0.027451, 1 )
text = "Woodcutting: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ConstPlus" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 126.0
margin_right = 565.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="StrPlus" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 203.0
margin_right = 565.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures", "custom_fonts" ]

[node name="AgiPlus" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 286.0
margin_right = 565.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="wcPlus" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 370.0
margin_right = 565.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ConstMin" type="TextureButton" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = 126.0
margin_right = 503.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="StrMin" type="TextureButton" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 442.0
margin_top = 203.0
margin_right = 502.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="AgiMin" type="TextureButton" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = 286.0
margin_right = 503.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="WcMin" type="TextureButton" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 442.0
margin_top = 370.0
margin_right = 502.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LvlUp" type="Button" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 568.0
margin_top = 368.0
margin_right = 745.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "LvlUp!"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="SkillTree" type="TextureButton" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_top = 112.0
margin_right = 742.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
_sections_unfolded = [ "Textures", "custom_colors", "custom_fonts" ]

[node name="Available" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 394.0
margin_top = 50.0
margin_right = 635.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.695313, 0.157532, 0.3592, 1 )
text = "Points available: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Level" type="Label" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 474.0
margin_top = 14.0
margin_right = 610.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.694118, 0.156863, 0.356863, 1 )
text = "Level: 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="ConstPlus" to="." method="_on_ConstPlus_pressed"]

[connection signal="pressed" from="StrPlus" to="." method="_on_StrPlus_pressed"]

[connection signal="pressed" from="AgiPlus" to="." method="_on_AgiPlus_pressed"]

[connection signal="pressed" from="wcPlus" to="." method="_on_wcPlus_pressed"]

[connection signal="pressed" from="ConstMin" to="." method="_on_ConstMin_pressed"]

[connection signal="pressed" from="StrMin" to="." method="_on_StrMin_pressed"]

[connection signal="pressed" from="AgiMin" to="." method="_on_AgiMin_pressed"]

[connection signal="pressed" from="WcMin" to="." method="_on_WcMin_pressed"]

[connection signal="pressed" from="LvlUp" to="." method="_lvl_up"]

[connection signal="pressed" from="SkillTree" to="." method="_on_SkillTree_pressed"]


